ticket:6 fixed issues with content alignment in table cells

--- a/note_book/static/less/base.less
+++ b/note_book/static/less/base.less
@@ -35,6 +35,7 @@ p {
 
 .wrapper {
   display: table;
+  table-layout: auto;
   width: 100%;
   height: 100%;
 }
@@ -60,6 +61,7 @@ p {
   display: table-cell;
   padding-top: @topbar-height;
   right: 0;
+  vertical-align: top;
   width: @sidebar-width;
 
   .nav-menu {
